--- a/settings.gradle
+++ b/settings.gradle
@@ -45,6 +45,7 @@ include 'leet-code:one-billion-row-challenge'
 include 'leet-code:project-euler'
 include 'leet-code:tarjans-scc'
 include 'lib:picocli-lib'
+include 'misc:auth-scratch:azure:example-azure-oauth-client'
 include 'misc:auth-scratch:casdoor:casdoor-initializer'
 include 'misc:auth-scratch:casdoor:example-casdoor-client'
 include 'misc:auth-scratch:discord-client'
