--- a/settings.gradle
+++ b/settings.gradle
@@ -32,6 +32,7 @@ include 'cloud:util:packer-tool'
 include 'cloud:util:pki:openssl-cli-api'
 include 'cloud:util:pki:self-signed-ca-tool'
 include 'cloud:util:s3-api-emulator'
+include 'cloud:util:registry-init'
 include 'cloud:util:tracing-guide'
 include 'cloud:util:vpn:ovpn4j:ovpn4j-config-parser'
 include 'cloud:util:vpn:ovpn4j:ovpn4j-model'
