--- a/misc/scratch/bc-scratch/build.gradle
+++ b/misc/scratch/bc-scratch/build.gradle
@@ -3,5 +3,5 @@ plugins {
 }
 
 dependencies {
-    implementation 'org.bouncycastle:bcprov-jdk18on:1.80'
+    implementation 'org.bouncycastle:bcprov-jdk18on'
 }
