--- a/buildPlugins/src/main/groovy/jib-conventions.gradle
+++ b/buildPlugins/src/main/groovy/jib-conventions.gradle
@@ -1,3 +1,7 @@
 plugins {
     id 'com.google.cloud.tools.jib'
 }
+
+tasks.named('jibDockerBuild') {
+    notCompatibleWithConfigurationCache("https://github.com/GoogleContainerTools/jib/issues/4468")
+}
