--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 org.gradle.caching=true
 org.gradle.configuration-cache=true
+org.gradle.configuration-cache.problems=warn
 org.gradle.warning.mode=all
 
 android.useAndroidX=true
