start work on asdf, make sure everything compiles

--- a/cloud/oci/oci-helpers/build.gradle
+++ b/cloud/oci/oci-helpers/build.gradle
@@ -5,8 +5,8 @@ plugins {
 
 // so it can run everywhere else
 java {
-    sourceCompatibility = JavaVersion.toVersion(17)
-    targetCompatibility = JavaVersion.toVersion(17)
+    // sourceCompatibility = JavaVersion.toVersion(17)
+    // targetCompatibility = JavaVersion.toVersion(17)
     withSourcesJar()
 }
 
