--- a/settings.gradle
+++ b/settings.gradle
@@ -57,9 +57,10 @@ include 'misc:auth-scratch:simple:simple-scratch-auth-server'
 include 'misc:azure-things:azure-data-things'
 include 'misc:azure-things:azure-data-things:container_test'
 include 'misc:copy-token'
-include 'misc:mc:mc-plugins:mc-first-plugin'
+// include 'misc:mc:mc-plugins:mc-first-plugin'
 include 'misc:mc:mc-plugins:mc-second-plugin'
 include 'misc:mc:mc-server'
+include 'misc:projects:apps:asdf4j'
 include 'misc:projects:apps:citation-management'
 include 'misc:projects:apps:file-browser:file-browser-frontend'
 include 'misc:projects:apps:resume-generator-linkedin'
