--- a/misc/projects/apps/asdf4j/build.gradle
+++ b/misc/projects/apps/asdf4j/build.gradle
@@ -1,4 +1,15 @@
 plugins {
     id 'spring-conventions'
     id 'picocli-conventions'
+    id 'application'
+}
+
+version = '0,0.1'
+
+application.mainClass = 'asdf.AsdfCli'
+jar.manifest.attributes 'Implementation-Version': version // todo make library friendly?
+
+dependencies {
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+    // implementation 'org.eclipse.jgit:org.eclipse.jgit:6.1.0.202203080745-r'
 }
