like neofetch but stripped down to perf characteristics

--- a/settings.gradle
+++ b/settings.gradle
@@ -61,6 +61,7 @@ include 'misc:copy-token'
 include 'misc:mc:mc-plugins:mc-second-plugin'
 include 'misc:mc:mc-server'
 include 'misc:projects:apps:asdf4j'
+include 'misc:projects:apps:capfetch'
 include 'misc:projects:apps:citation-management'
 include 'misc:projects:apps:file-browser:file-browser-frontend'
 include 'misc:projects:apps:resume-generator-linkedin'
