--- a/settings.gradle
+++ b/settings.gradle
@@ -41,6 +41,7 @@ include 'cloud:vm:qemu-cloud-init'
 include 'cloud:vm:vagrant'
 include 'leet-code:amazon:traffic-light'
 include 'leet-code:benchmarking'
+include 'leet-code:distributed:distributed-merge-sort'
 include 'leet-code:leet-code'
 include 'leet-code:one-billion-row-challenge'
 include 'leet-code:project-euler'
