--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,7 @@ ij_any_line_comment_add_space = true
 ij_any_line_comment_at_first_column = false
 ij_any_block_comment_add_space = false
 ij_any_block_comment_at_first_column = false
+ij_java_align_multiline_binary_operation = false
 
 [*.sh]
 tab_width = 2
