--- a/leet-code/distributed/distributed-merge-sort/build.gradle
+++ b/leet-code/distributed/distributed-merge-sort/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     compileOnly 'org.hibernate.orm:hibernate-core'
 
     runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
-    runtimeOnly 'org.postgresql:postgresql'
+    implementation 'org.postgresql:postgresql'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
